rolling out security and adding in support for legacy port

--- a/cagrid-mms/cagrid-mms-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-mms/cagrid-mms-service-tools/src/main/resources/bootstrapper.properties
@@ -1,34 +1,14 @@
 org.cagrid.commandline.prompt=true
 
-cagrid.default.truststore.location=/Users/markrave/apache-servicemix-4.5.2/etc/dorian/truststore.jks
-cagrid.gme.wsrf.truststore.password=changeit
-cagrid.default.truststore.password=changeit
+cagrid.mms.wsrf.host=localhost
+cagrid.mms.wsrf.port=8080
 
-cagrid.gme.wsrf.host=localhost
-cagrid.gme.wsrf.port=7742
-cagrid.gme.wsrf.url.path=wsrf/services/cagrid/gme
-cagrid.gme.certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
-cagrid.gme.key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
-cagrid.gme.wsrf.keystore.alias=host
-cagrid.gme.wsrf.key.password=changeit
-cagrid.gme.wsrf.keystore.password=changeit
+cagrid.mms.wsrf.url.path=mms
 
-cagrid.gme.configure.legacy.wsrf=true
-cagrid.gme.legacy-wsrf.host=localhost
-cagrid.gme.legacy-wsrf.port=8443
-cagrid.gme.legacy-wsrf.url.path=wsrf/services/cagrid/GlobalModelExchange
-cagrid.gme.legacy-certificate.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cacert.pem
-cagrid.gme.legacy-key.location=../../cagrid-dorian/cagrid-dorian-service/src/test/resources/ca-test/bmi-cakey.pem
-cagrid.gme.legacy-wsrf.keystore.alias=gme
-cagrid.gme.legacy-wsrf.keystore.password=changeit
-cagrid.gme.legacy-wsrf.key.password=changeit
+cagrid.mms.configure.legacy.wsrf=true
+cagrid.mms.legacy-wsrf.url.path=wsrf/services/cagrid/MetadataModelService
+cagrid.mms.legacy-wsrf.host=localhost
+cagrid.mms.legacy-wsrf.port=8081
 
-cagrid.gme.service.db.url=jdbc:mysql://localhost:3306/gme
-cagrid.gme.service.db.username=root
-cagrid.gme.service.db.password=
-
-cagrid.gme.dorian.config=META-INF/spring/dorian-configuration.xml
-cagrid.gme.dorian.properties=../../cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
-
-cagrid.gme.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
+cagrid.mms.wsrf.registration.index.url=http://localhost:8080/wsrf/services/DefaultIndexService
 
