--- a/cagrid-mms/cagrid-mms-service-tools/pom.xml
+++ b/cagrid-mms/cagrid-mms-service-tools/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-gme</artifactId>
-		<version>2.0.3-SNAPSHOT</version>
+		<artifactId>cagrid-mms</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>cagrid-gme-service-tools</artifactId>
-	<name>caGrid GME Service Tools</name>
+	<artifactId>cagrid-mms-service-tools</artifactId>
+	<name>caGrid MMS Service Tools</name>
 
 	<dependencies>
 		<dependency>
@@ -127,7 +127,7 @@
 							</execution>
 						</executions>
 						<configuration>
-							<mainClass>org.cagrid.gme.service.tools.Bootstrapper</mainClass>
+							<mainClass>org.cagrid.mms.service.tools.Bootstrapper</mainClass>
 							<arguments>
 
 							</arguments>
